[package]
name = "mdx"
version = "0.0.2"
authors = [
    "John Otander <johnotander@gmail.com>",
    "Christopher Biscardi <chris@christopherbiscardi.com>",
]
edition = "2018"
description = "MDX implementation in Rust"
homepage = "https://mdxjs.com/"
readme = "./README.md"
keywords = ["mdx", "markdown"]
license = "MIT"

[lib]
name = "mdx"
path = "src/lib.rs"

[dependencies]
nom = "6.0.1"
nom-supreme = "0.1.2"
color-eyre = "0.5.10"
owo-colors = "1.2.1"
itertools = "0.9.0"

[dev-dependencies]
criterion = "0.3.3"
datatest = "0.6.3"
serde = { version = "1.0.118", features = ["derive"] }

[[bench]]
name = "mdx_benchmark"
harness = false
